app/styles/local.css
/* ... */
.power-select-fragment[doi-subject] div:first-child,
.power-select-fragment[doi-affiliation] div:first-child,
.power-select-fragment[doi-resource-type] div:first-child,
.power-select-fragment[doi-title-type] div:first-child,
.power-select-fragment[doi-title-lang] div:first-child,
.power-select-fragment[data-repository-language] div:first-child,
.power-select-fragment[data-repository-type] div:first-child,
.power-select-fragment[data-repository-certificate] div:first-child,
.power-select-fragment[doi-date-type] div:first-child,
.power-select-fragment[doi-related-identifier-type] div:first-child,
.power-select-fragment[doi-resource-type-general] div:first-child,
.power-select-fragment[doi-relation-type] div:first-child,
.power-select-fragment[doi-language] div:first-child,
.power-select-fragment[doi-alternate-identifier-type] div:first-child,
.power-select-fragment[doi-rights] div:first-child,
.power-select-fragment[doi-format] div:first-child,
.power-select-fragment[doi-funder-name] div:first-child,
.power-select-fragment[doi-funder-identifier-type] div:first-child,
.power-select-fragment[doi-related-item-type] div:first-child,
.power-select-fragment[doi-related-item-identifier] div:first-child,
.power-select-fragment[doi-description-type] div:first-child,
.power-select-fragment[doi-description-language] div:first-child
{
  margin-left: 0;
  padding: 0;
  width: 100% !important;
}

.power-select-fragment[doi-relation-type] .row.mb-3 .col-md-9,
.power-select-fragment[doi-alternate-identifier-type] .row.mb-3 .col-md-9,
.power-select-fragment[doi-rights] .row.mb-3 .col-md-9,
.power-select-fragment[doi-format] .row.mb-3 .col-md-9,
.power-select-fragment[doi-funder-name] .row.mb-3 .col-md-9,
.power-select-fragment[doi-funder-identifier-type] .row.mb-3 .col-md-9,
.power-select-fragment[doi-funder-identifier-type] .row.mb-3 .col-md-9,
.power-select-fragment[doi-related-item-type] .row.mb-3 .col-md-9,
.power-select-fragment[doi-related-item-identifier] .row.mb-3 .col-md-9
{
  width: 100% !important;
}

/* DOI FORMS - DOI field */

.form-text code {
  color:inherit;
  background-color: #eee;
}

#suffix {
  display: inline-block;
  width: 100%;
}

#suffix .input-group-addon.refresh {
  right: 55px;
}

#suffix .input-group-addon.clear {
  right: 28px;
}

#suffix .form-text {
  margin-left: -118px;
  margin-top: 44px;
}

/* DOI FORMS */

.add-name-identifier {
  margin-top: 0px !important;
}

#doi > div {
  padding-left: 0px;
}

#url > div {
  padding-right: 0px;
}

#publication-year > div {
  padding-right: 0px;
}

#resource-type-general > div {
  padding-right: 0px;
}

div[doi-publisher] > div {
  padding-right: 0px;
}

/* HAMBURGER - looks good, but doesn't work.  */

.navbar-toggler-icon {
  display: inline-block;
  width: 1.5em;
  height: 1.5em;
  vertical-align: middle;
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%2833, 37, 41, 0.75%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
  background-repeat: no-repeat;
  background-position: center;
  background-size: 100%;
}

/* DOI FORMS - UPLOAD */

.has-error .form-control,
.has-error .es-control,
.is-invalid.text-area.form-control
{
  color: #e74c3c;
  border-color: #e74c3c;
}

.form-group input.is-valid + div.form-text {
    color: #2ecc71;
}

/* VALIDATION - text areas (Mostly in doi form upload.) */

.form-group.has-feedback textarea.form-control
{
  color: #2ecc71;
  border-color: #2ecc71;
}

.form-group.has-error textarea.form-control
{
  color: #e74c3c;
  border-color: #e74c3c;
}

/* Fixes email service contract field (repositories/new) */
.form-group .has-error .help-block
{
  color: #e74c3c;
}

/* Landing page */

/* Footer Color for accessibility */

.footer {
  color: #243B54;
}

.footer a, .footer a:hover, .footer a:visited {
  color: #243B54;
}

.footer h3 {
  font-size: 18px;
}

.footer .color-description {
  font-size: 18px;
  color: #243B54;
}

main a:not(.btn):not(.navbar-brand):not(.nav-link),
.wrapper a:not(.btn):not(.navbar-brand):not(.nav-link) {
  color: #006b8f;
  text-underline-offset: 0.1em;
}

main a:not(.btn):not(.navbar-brand):not(.nav-link):hover,
main a:not(.btn):not(.navbar-brand):not(.nav-link):focus,
.wrapper a:not(.btn):not(.navbar-brand):not(.nav-link):hover,
.wrapper a:not(.btn):not(.navbar-brand):not(.nav-link):focus {
  color: #004766;
}
.about-title,
h3.member {
  color: #006b5b;
  font-size: 24px;
  font-weight: 600;
}
.landing-nav-link {
  color: #243b54 !important;
  background-color: #fff !important;
}

.landing-nav-link:hover,
.landing-nav-link:focus {
  color: #102a43 !important;
  background-color: #fff !important;
}

